--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Awake - Your personal AI-powered growth companion. Explore curiosities, develop traits, and author your ideal life." />
+    <title>Awake - Personal Growth & AI Coaching</title>
   </head>
   <body>
     <div id="root"></div>
