--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Awake - Your personal AI-powered growth companion. Explore curiosities, develop traits, and author your ideal life." />
     <title>Awake - Personal Growth & AI Coaching</title>
+    
+    <!-- Google Model Viewer for 3D Avatars -->
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
